<resources>
    <string name="app_name">Game Mine Seeker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->


    <string name="title_activity_main_screen">Main Screen</string>
    <string name="title_activity_game_play">Game Play</string>
    <string name="welcome">WELCOME</string>
    <string name="skip">SKIP</string>
    <string name="mine_seeker">MINE SEEKER</string>
    <string name="to">TO</string>
    <string name="created_by_viet_h_truong">Created by Viet H. Truong</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="play_game">PLAY GAME</string>
    <string name="options">OPTIONS</string>
    <string name="help">HELP</string>
    <string name="scans_used_0"># Scans used: 0</string>
    <string name="ok">OK</string>
    <string name="scan_used"># Scans used: 0</string>
    <string name="Found_Mine">Found 0 of </string>
    <string name="mines">\ mines.</string>
    <string name="congratulations_n_you_won_the_game">Congratulations! \n You won the game!</string>
    <string name="title_activity_options_screen">Options Screen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="number_of_rows">Number of rows</string>
    <string name="settings">Settings</string>
    <string name="empty">""</string>
    <string name="number_of_columns">Number of columns</string>
    <string name="number_of_mines">Number of mines</string>
    <string name="title_activity_help_screen">HelpScreen</string>
    <string name="this_game_is_created_by_viet_h_truong">This game is created by Viet H. Truong</string>
    <string name="we_are_in_an_adventure_looking_for_some_minerals_in_a_very_dark_cave_n_hopefully_we_can_find_some_of_them_here">We are in an adventure looking for some minerals in a very dark cave. \n Hopefully we can find some of them here.</string>
    <string name="how_to_play_every_cell_contains_a_mineral_or_a_hint_of_how_many_minerals_are_there_in_the_current_row_and_column_your_mission_is_to_find_all_the_minerals_with_the_least_hints_nquickly_we_need_to_keep_looking_for_a_nother_mine_may_be_there_will_be_crystals">HOW TO PLAY: Every cell contains a mineral or a hint of how many minerals are there in the current row and column. Your mission is to find all the minerals with the least hints. \nQuickly, we need to keep looking for a nother mine. May be there will be crystals.</string>
    <string name="link_to_website_https_opencoursehub_cs_sfu_ca_jackt_grav_cms_cmpt276_home">Link to website: https://opencoursehub.cs.sfu.ca/jackt/grav-cms/cmpt276/home</string>
    <string name="link_to_all_images_used_in_this_application_https_ya_webdesign_com_explore_mining_vector_drawing">Link to all images used in this application:https://ya-webdesign.com/explore/mining-vector-drawing/</string>
    <string name="found">Found \</string>
    <string name="of">\ of \</string>
    <string name="total_game_play">\Total games played: \</string>
    <string name="link_to_music_used_http_www_orangefreesounds_com_scan_sound_nhttp_www_orangefreesounds_com_correct_answer_sound_effect">Link to music used: http://www.orangefreesounds.com/scan-sound/\nhttp://www.orangefreesounds.com/correct-answer-sound-effect/</string>
    <string name="back">Back</string>
</resources>
